Fix long notes going out of the container
Add some metadata to load_data

--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -121,9 +121,10 @@ dfn:hover::after {
     position: absolute;
     z-index: 9999;
     background-color: white;
+    max-width: 800px;
+    width: max-content;
     border: 1px solid black;
     padding: 5px;
-    white-space: nowrap;
     transform: translateY(-1.5em);
     left: 50%;
     transform: translateX(-50%) translateY(-2em);
